# SCT_ML_2

./: .gitignore  PROJECT_SUMMARY.md  README.md  REPORT.md  analysis.py  app.py  kmeans_animation.py  main.py  pyproject.toml  test.py  visualizations.py
templates/: animation.html  business.html  clustering.html  efficiency.html  elbow.html  home.html  overview.html  quality.html  single_page.html  test_results.html
