[project]
name = "customer-segmentation"
version = "0.1.0"
description = "Customer Segmentation with K-Means Clustering - Web Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]
